# activity_warden

./: Makefile  README.md
firefox_extension/: README.md  app_manifest.json  background.js  manifest.json  popup.html
firefox_native_messenger/: Cargo.toml  README.md
firefox_native_messenger/src/: main.rs  messaging.rs  types.rs  watcher.rs
gnome_desktop/: Cargo.toml  README.md
gnome_desktop/src/: main.rs  proxy.rs
gnome_desktop/src/components/: header_model.rs  mod.rs  timer_display.rs  timer_popup.rs
gnome_desktop/src/pages/: data.rs  home.rs  mod.rs  settings.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/dbus/: identifiers.rs  mod.rs
shared/src/types/: daemon.rs  event.rs  mod.rs  schema.rs
user_daemon/: Cargo.toml  README.md
user_daemon/sql/: focus_changes_create.sql  focus_changes_insert.sql  focus_changes_select.sql  timers_create.sql  timers_delete.sql  timers_insert.sql  timers_select.sql  timers_update.sql
user_daemon/src/: context.rs  event_bus.rs  main.rs  persistence.rs  proxy.rs
