[package]
name = "user_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
zbus = "5.9.0"
zvariant = "5.6.0"
shared = { path = "../shared" }
rusqlite = { version = "0.37.0", features = ["chrono"] }
directories = "6.0.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
arc-swap = "1.7.1"
futures-lite = "2.6.1"
sha2 = "0.10.9"
hex = "0.4.3"
